--- a/indra_depmap_service/query.html
+++ b/indra_depmap_service/query.html
@@ -184,23 +184,25 @@
         }
 
         // Fill directed paths
-        for (len in pathsKeyedArray) {
-          let tableBody = document.getElementById('query-results-' + (len-1))
-          document.getElementById('npaths-' + (len-1)).textContent = 'Paths: ' + pathsKeyedArray[len].length;
-          document.getElementById('subject-placeholder-' + (len-1)).textContent = source;
-          document.getElementById('object-placeholder-' + (len-1)).textContent = target;
-          for (pathArray of pathsKeyedArray[len]) {
-            let newRow = document.createElement('tr');
-            // Add current path
-            let newPath = document.createElement('td');
-            newPath.innerHTML = pathArray.path.join('&rarr;');
-            newRow.appendChild(newPath)
+        if (pathsKeyedArray && Object.keys(pathsKeyedArray).length > 0) {
+          for (len in pathsKeyedArray) {
+            let tableBody = document.getElementById('query-results-' + (len-1))
+            document.getElementById('npaths-' + (len-1)).textContent = 'Paths: ' + pathsKeyedArray[len].length;
+            document.getElementById('subject-placeholder-' + (len-1)).textContent = source;
+            document.getElementById('object-placeholder-' + (len-1)).textContent = target;
+            for (pathArray of pathsKeyedArray[len]) {
+              let newRow = document.createElement('tr');
+              // Add current path
+              let newPath = document.createElement('td');
+              newPath.innerHTML = pathArray.path.join('&rarr;');
+              newRow.appendChild(newPath)
 
-            let newSupport = document.createElement('td');
-            newSupport.innerHTML = generatePathLinkout(pathArray.stmts)
-            newRow.appendChild(newSupport)
+              let newSupport = document.createElement('td');
+              newSupport.innerHTML = generatePathLinkout(pathArray.stmts)
+              newRow.appendChild(newSupport)
 
-            tableBody.appendChild(newRow);
+              tableBody.appendChild(newRow);
+            }
           }
         }
 
