Expose error text to user

--- a/indra_depmap_service/query.html
+++ b/indra_depmap_service/query.html
@@ -161,7 +161,7 @@
               break;
             default:
               console.log('Submission error: check ajax response');
-              statusBox.textContent = 'error: ' + xhr.status;
+              statusBox.textContent = 'Error: ' + xhr.status + ': ' + xhr.responseText;
               break;
           }
         }
