--- a/indra_depmap_service/query.html
+++ b/indra_depmap_service/query.html
@@ -320,6 +320,28 @@
       return htmlString.substring(0, htmlString.length-4); // Cut out the last <br> 
     }
 
+    function generateCardTable(len) {
+      var intermArrows = '';
+      if (len > 1) {
+        for (let i = 1; i < len; i++) {
+          intermArrows += 'X' + i + '&rarr;'
+        }
+      }
+
+      let newCard = document.createElement('div');
+      newCard.className = 'card directed-path';
+      newCard.innerHTML = '<div class="card-header"><h3 class="display-7"><a href="#" class="stmt_toggle" ' +
+        'data-toggle="collapse" data-target="#collapse-paths-' + len + ' " aria-expanded="false" ' +
+        'aria-controls="collapse-paths-' + len + '"> ' + len + ' Edge Paths (<div id="subject-placeholder-' + len +
+        '" class="placeholder subject-placeholder">A</div>&rarr;' + intermArrows +
+        '<div id="object-placeholder-' + len + '" class="placeholder object-placeholder">B</div>)</a><span ' +
+        'id="npaths-' + len + '" class="badge badge-primary badge-pill float-right path-count">Paths: ' +
+        '0</span></h3></div><div id="collapse-paths-' + len + '" class="collapse"><div class="card-body">' +
+        '<table class="table"><thead class="table-head"><th>Path</th><th>Support</th></thead><tbody ' +
+        'class="table-body" id="query-results-' + len + '"></tbody></table></div></div>';
+      return newCard;
+    }
+
   </script>
   <style>
     h3 a.stmt_toggle {
@@ -500,114 +522,7 @@
         </div>
       </div>
     </div>
-    <!-- Direct paths: a-b -->
-    <div class="card">
-      <div class="card-header">
-        <h3 class="display-7">
-          <a href="#"
-             class="stmt_toggle"
-             data-toggle="collapse"
-             data-target="#collapse-paths-1"
-             aria-expanded="false" 
-             aria-controls="collapse-paths-1">
-            Direct Paths (<div id="subject-placeholder-1" class="placeholder">A</div>&rarr;<div id="object-placeholder-1" class="placeholder">B</div>)
-          </a>
-          <span id="npaths-1" class="badge badge-primary badge-pill float-right path-count">Paths: 0</span>
-        </h3>
-      </div>
-      <div id="collapse-paths-1" class="collapse">
-        <div class="card-body">
-          <table class="table">
-            <thead class="table-head">
-              <th>Path</th>
-              <th>Support</th>
-            </thead>
-            <tbody class="table-body" id="query-results-1"></tbody>
-          </table>
-        </div>
-      </div>
-    </div>
-    <!-- Path len 2: a-b-c -->
-    <div class="card">
-      <div class="card-header">
-        <h3 class="display-7">
-          <a href="#"
-             class="stmt_toggle"
-             data-toggle="collapse"
-             data-target="#collapse-paths-2"
-             aria-expanded="false" 
-             aria-controls="collapse-paths-2">
-            2-Edge Paths (<div id="subject-placeholder-2" class="placeholder">A</div>&rarr;U&rarr;<div id="object-placeholder-2" class="placeholder">B</div>)
-          </a>
-          <span id="npaths-2" class="badge badge-primary badge-pill float-right path-count">Paths: 0</span>
-        </h3>
-      </div>
-      <div id="collapse-paths-2" class="collapse">
-        <div class="card-body">
-          <table class="table">
-            <thead class="table-head">
-              <th>Path</th>
-              <th>Support</th>
-            </thead>
-            <tbody class="table-body" id="query-results-2"></tbody>
-          </table>
-        </div>
-      </div>
-    </div>
-    <!-- Path len 3: a-b-c-d -->
-    <div class="card">
-      <div class="card-header">
-        <h3 class="display-7">
-          <a href="#"
-             class="stmt_toggle"
-             data-toggle="collapse"
-             data-target="#collapse-paths-3"
-             aria-expanded="false" 
-             aria-controls="collapse-paths-3">
-            3-Edge Paths (<div id="subject-placeholder-3" class="placeholder">A</div>&rarr;U&rarr;V&rarr;<div id="object-placeholder-3" class="placeholder">B</div>)
-          </a>
-          <span id="npaths-3" class="badge badge-primary badge-pill float-right path-count">Paths: 0</span>
-        </h3>
-      </div>
-      <div id="collapse-paths-3" class="collapse">
-        <div class="card-body">
-          <table class="table">
-            <thead class="table-head">
-              <th>Path</th>
-              <th>Support</th>
-            </thead>
-            <tbody class="table-body" id="query-results-3"></tbody>
-          </table>
-        </div>
-      </div>
-    </div>
-    <!-- Path len 4: a-b-c-d -->
-    <div class="card">
-      <div class="card-header">
-        <h3 class="display-7">
-          <a href="#"
-             class="stmt_toggle"
-             data-toggle="collapse"
-             data-target="#collapse-paths-4"
-             aria-expanded="false" 
-             aria-controls="collapse-paths-4">
-            4-Edge Paths (<div id="subject-placeholder-4" class="placeholder">A</div>&rarr;U&rarr;V&rarr;X&rarr;<div id="object-placeholder-4" class="placeholder">B</div>)
-          </a>
-          <span id="npaths-4" class="badge badge-primary badge-pill float-right path-count">Paths: 0</span>
-        </h3>
-      </div>
-      <div id="collapse-paths-4" class="collapse">
-        <div class="card-body">
-          <table class="table">
-            <thead class="table-head">
-              <th>Path</th>
-              <th>Support</th>
-            </thead>
-            <tbody class="table-body" id="query-results-4"></tbody>
-          </table>
-        </div>
-      </div>
-    </div>
+    <!-- Dynamic tables -->
   </div>
 
   <footer class="footer text-muted" id="about" style="background: #F5F5F5;">
