--- a/indra_depmap_service/query.html
+++ b/indra_depmap_service/query.html
@@ -466,7 +466,7 @@
     <p><i id="query-status">Some settings are currently unavailable</i></p>
   </div>
 
-  <div class="container">
+  <div id="table-area" class="container">
     <h2 class="display-6">Search Results</h2>
     <!-- Common parents complexes and families -->
     <div class="card">
@@ -478,7 +478,8 @@
              data-target="#collapse-paths-cp"
              aria-expanded="false" 
              aria-controls="collapse-paths-cp">
-            Complexes and Families (<div id="subject-placeholder-cp" class="placeholder">A</div>-<div id="object-placeholder-cp" class="placeholder">B</div>)
+            Complexes and Families (<span id="subject-placeholder-cp" class="placholder subject-placeholder">A</span> -
+              <span id="object-placeholder-cp" class="placholder object-placeholder">B</span>)
           </a>
           <span id="npaths-cp" class="badge badge-primary badge-pill float-right path-count">Entitites: 0</span>
         </h3>
@@ -488,7 +489,7 @@
           <table class="table">
             <thead class="table-head">
               <th>Family/Complex</th>
-              <th>Namespaces</th>
+              <th>Namespace</th>
             </thead>
             <tbody class="table-body" id="query-results-cp"></tbody>
           </table>
@@ -505,7 +506,8 @@
              data-target="#collapse-common-targets"
              aria-expanded="false"
              aria-controls="collapse-common-targets">
-            Common Targets (<div id="subject-placeholder-ct" class="placeholder">A</div>&rarr;Z&larr;<div id="object-placeholder-ct" class="placeholder">B</div>)
+            Common Targets (<span id="subject-placeholder-ct" class="placholder subject-placeholder">A</span>&rarr;Z&larr;<span
+              id="object-placeholder-ct" class="placholder object-placeholder">B</span>)
           </a>
           <span id="common-targets" class="badge badge-primary badge-pill float-right path-count">Targets: 0</span>
         </h3>
