path len -> edge count

--- a/indra_depmap_service/query.html
+++ b/indra_depmap_service/query.html
@@ -377,8 +377,9 @@
         <div class="col">
           <div class="container" style="width: 185px; float: left; padding: 0px;">
             <input class="form-control" type="number" step="1" name="path_length" id="path-length" min="0" max="10"
-                   placeholder="Specific path length"
-                   title="Only search the specified path length, 0 or no value searches all lengths.">
+                   placeholder="Number of edges"
+                   title="Only search for paths with the specified number of edges, 0 or no value allows any number of
+                   edges.">
           </div>
         </div>
         <div class="col">
