Better explanation of path length behavior.

--- a/indra_depmap_service/query.html
+++ b/indra_depmap_service/query.html
@@ -378,7 +378,8 @@
           <div class="container" style="width: 185px; float: left; padding: 0px;">
             <input class="form-control" type="number" step="1" name="path_length" id="path-length" min="0" max="10"
                    placeholder="Number of edges"
-                   title="Only search for paths with the specified number of edges, 0 or no value allows any number of
+                   title="Only search for paths with the specified number of edges. Set to 0 to exlude directed path
+                   search completely. An empty value allows any number of edges.
                    edges.">
           </div>
         </div>
