Move title attribute to enclosing form-select

--- a/indra_depmap_service/query.html
+++ b/indra_depmap_service/query.html
@@ -392,14 +392,14 @@
       </div>
       <div class="row">
         <div class="col">
-          <div class="form-select">
-            <select name="stmt-filter" id="stmt-filter" title="The path will only contain the selected statement types" placeholder="Statement types included in path" multiple>
+          <div class="form-select" title="The path will not contain the selected statement types">
+            <select name="stmt-filter" id="stmt-filter" placeholder="Statement types to exclude" multiple>
             </select>
           </div>
         </div>
         <div class="col">
-          <div class="form-select">
-            <select name="node-filter" id="node-filter" title="The path will only contain nodes from the selected namespaces" placeholder="Node namespaces included in path" multiple>
+          <div class="form-select" title="The path will only contain nodes from the selected namespaces">
+            <select name="node-filter" id="node-filter" placeholder="Node namespaces included in path" multiple>
             </select>
           </div>
         </div>
