Replace weighted/simple search checkboxes with radios

--- a/indra_depmap_service/query.html
+++ b/indra_depmap_service/query.html
@@ -432,13 +432,13 @@
         <input type="checkbox" class="custom-control-input" id="direct-only" disabled>
         <label class="custom-control-label" for="direct-only">Direct only</label>
       </div>
-      <div class="custom-control custom-checkbox">
-        <input type="checkbox" class="custom-control-input" id="weighted-search">
+      <div class="custom-control custom-radio custom-control-inline">
+        <input type="radio" id="weighted-search" name="customRadioInline1" class="custom-control-input">
         <label class="custom-control-label" for="weighted-search">Weighted search</label>
       </div>
-      <div class="custom-control custom-checkbox">
-        <input type="checkbox" class="custom-control-input" id="simple-paths" checked>
-        <label class="custom-control-label" for="simple-paths">Simple path search</label>
+      <div class="custom-control custom-radio custom-control-inline">
+        <input type="radio" id="simple-paths" name="customRadioInline1" class="custom-control-input">
+        <label class="custom-control-label" for="simple-paths">Simple search</label>
       </div>
       <div class="custom-control custom-checkbox">
         <input type="checkbox" class="custom-control-input" id="curated-db-only" disabled>
