--- a/indra_depmap_service/query.html
+++ b/indra_depmap_service/query.html
@@ -93,11 +93,8 @@
       for (c of document.getElementById('stmt-filter').children) {
         stmtFilterList.push(c.value)
       }
-      if (!document.getElementById('fplx-fam-edges').checked) {
-        stmtFilterList.push('isa')
-      }
-      if (!document.getElementById('fplx-cplx-edges').checked) {
-        stmtFilterList.push('part_of')
+      if (!document.getElementById('fplx-edges').checked) {
+        stmtFilterList.push('fplx')
       }
       var nodeBlackList = [];
       for (nn of document.getElementById('node-blacklist').value.split(',')) {
@@ -434,12 +431,8 @@
         <label class="custom-control-label" for="curated-db-only">Curated databases only</label>
       </div>
       <div class="custom-control custom-checkbox">
-        <input type="checkbox" class="custom-control-input" id="fplx-fam-edges">
-        <label class="custom-control-label" for="fplx-fam-edges">Include FamPlex Families as edges</label>
-      </div>
-      <div class="custom-control custom-checkbox">
-        <input type="checkbox" class="custom-control-input" id="fplx-cplx-edges">
-        <label class="custom-control-label" for="fplx-cplx-edges">Include FamPlex Complexes as edges</label>
+        <input type="checkbox" class="custom-control-input" id="fplx-edges">
+        <label class="custom-control-label" for="fplx-edges">Include FamPlex Families and Complexes in path search</label>
       </div>
       <div class="custom-control custom-checkbox">
         <input type="checkbox" class="custom-control-input" id="fplx-expand">
