Change <title> and title

--- a/indra_depmap_service/query.html
+++ b/indra_depmap_service/query.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>INDRA DepMap Explainer</title>
+  <title>INDRA Network Search</title>
 
   <!-- JS libraries -->
   <!-- JQ -->
@@ -359,7 +359,7 @@
 </head>
 <body>
   <div class="container">
-    <h1 class="display-5" style="padding-top: 15px; padding-bottom: 15px;">INDRA Gene Dependency Explainer 2.0</h1>
+    <h1 class="display-5" style="padding-top: 15px; padding-bottom: 15px;">INDRA Network Search</h1>
   </div>
   <div class="container">
     <h2 class="display-6">Enter search</h2>
